Fix clipping of root-level .dito-schema-header

--- a/packages/admin/src/styles/_settings.sass
+++ b/packages/admin/src/styles/_settings.sass
@@ -35,6 +35,7 @@ $menu-z-index: 1000
 $menu-padding-ver: $menu-font-size
 $menu-padding-hor: $content-padding
 $menu-padding: $menu-padding-ver $menu-padding-hor
+$menu-height: $menu-font-size + 2 * $menu-padding-ver
 
 // Tabs
 $tab-margin: 6px
